# fastapiHW

./: README.md  full-crud-from-scratch.md  pyproject.toml
my_crud_app/: items.json
my_crud_app/app/: main.py  models.py
my_crud_app/app/routes/: items.py
my_crud_app/app/static/css/: custom.css
my_crud_app/app/templates/: base.html  delete_confirm.html  item_form.html  landing.html
part2/app/: items.py  main.py
part2/app/data/: items.json
part2/app/static/css/: style.css
part2/app/templates/: base.html  item_form.html  items_list.html  landing.html
