[project]
name = "FastAPI_Tutorial"
version = "0.1.0"
description = "Fast API Tutorial - Bozorgmeehr University"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=26.3.1",
    "fastapi>=0.135.3",
    "flake8>=7.3.0",
    "httpx>=0.28.1",
    "isort>=8.0.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "pydantic>=2.12.5",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-multipart>=0.0.26",
    "requests>=2.33.1",
    "uvicorn>=0.44.0",
]

[[tool.uv.index]]
url = "https://mirror2.chabokan.net/pypi/simple"
default = true
